# chat-llm-POMDP

./: #memo.md#  .gitignore  memo.md  pyproject.toml  run_discord.sh  run_server.sh
app/: main.py
app/adapters/: chroma_memory.py  clock.py  firecrawl_search.py  ollama_llm.py  trace_json.py
app/config/: persona.py  settings.py
app/core/: deps.py
app/graph/: build_graph.py
app/graph/nodes/: compute_metrics.py  decide_repair_plan.py  decide_response_plan.py  deep_frame.py  deep_intent_plan.py  deep_memory.py  deep_repair.py  deep_web.py  gate_depth.py  ingest_turn.py  intent_respond.py  learn_update.py  observe_reaction.py  persist_episode.py  persist_trace.py  predict_shallow.py  prompt_utils.py  repair_respond.py  respond.py  update_joint_action.py
app/graph/utils/: utils.py  write.py
app/models/: state.py  types.py
app/ports/: clock.py  llm.py  memory.py  search.py  trace.py
app/server/: discord.py  engine.py  run.py  schema.py
